# contextpack-md

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/: api.md  contributing.md  index.md  usage.md
site/: 404.html  index.html  objects.inv  search.html  sitemap.xml
site/api/: index.html
site/contributing/: index.html
site/search/: search_index.json
site/usage/: index.html
src/contextpack/: api.py  cli.py  repo.py  scraper.py  summarizer.py
src/contextpack_md/: __init__.py  api.py  cli.py  scraper.py
tests/: test_api.py  test_cli.py  test_scraper.py
