[project]
name = "contextpack"
version = "0.1.0"
requires-python = ">=3.11"
authors = [{ name = "Theo", email = "130441797+theguega@users.noreply.github.com" }]

dependencies = [
  "typer>=0.24.0,<0.25",
  "trafilatura>=2.0.0,<3",
  "httpx>=0.28.1,<0.29",
]

[project.scripts]
contextpack = "contextpack.cli:app"

[project.optional-dependencies]
dev = [
  "ruff>=0.15.5,<0.16"
]
pdf = [
  "marker-pdf>=0.3.14"
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"
