[project]
name = "contextpack-md"
version = "0.2.1"
description = "A dead-simple tool to extract high-quality Markdown from any URL or PDF for LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
authors = [{ name = "Theo", email = "130441797+theguega@users.noreply.github.com" }]
keywords = ["markdown", "scraper", "llm", "pdf", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
  "typer>=0.24.0,<0.25",
  "trafilatura>=2.0.0,<3",
  "httpx>=0.28.1,<0.29",
]

[project.scripts]
contextpack-md = "contextpack_md.cli:app"

[project.optional-dependencies]
pdf = [
    "marker-pdf>=1.10.2",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.pyapp]
project = "contextpack-md"
module = "contextpack_md.cli"
command = "app"
python-version = "3.12"
features = ["pip"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[project.urls]
Documentation = "https://theguega.github.io/contextpack-md/"
